fix View Results button overflow

--- a/src/view/layouts/darkTheme.css
+++ b/src/view/layouts/darkTheme.css
@@ -110,7 +110,7 @@
     -fx-background-color: #009ad5;
     -fx-background-radius: 50px;
     -fx-border-width: 0px;
-    -fx-min-width: 100px;
+    -fx-min-width: 160px;
     -fx-font-size: 14pt;
     -fx-font-weight: bold;
     -fx-font-family: 'Helvetica Neue LT Com 45 Light';
